SVGSizing: Add --pointer-shadow option as well
Adds common drop-shadow filter to the sources themselves.